--- a/index.html
+++ b/index.html
@@ -381,6 +381,14 @@
             document.getElementById("resumenModal").style.display = "none";
         }
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TU_CODIGO"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-TU_CODIGO');
+    </script>
+    
 </body>
 <footer>
     <p>© 2025 Ruta Latte - Todos los derechos reservados</p>
